Refactors, now testing query Api